Created and populated sidebar

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,1 +1,4 @@
-<app-scrollbar-left></app-scrollbar-left>
+<div class="d-flex" id="homepage">
+  <app-scrollbar-left></app-scrollbar-left>
+  <app-main-content></app-main-content>
+</div>
