feat: :rocket: The array will always display the pokemons in the correct order

--- a/src/app/components/scrollbar-left/scrollbar-left.component.html
+++ b/src/app/components/scrollbar-left/scrollbar-left.component.html
@@ -1,4 +1,4 @@
-<div id="sidebar">
+<div id="sidebar" *ngIf="areArived">
   <div id="list-container">
     <ul>
       <li *ngFor="let pokemon of pokemons" class="d-flex align-items-center space-between">
