feat: :rocket: emit and show artwork

--- a/src/app/components/scrollbar-left/scrollbar-left.component.html
+++ b/src/app/components/scrollbar-left/scrollbar-left.component.html
@@ -1,7 +1,7 @@
 <div id="sidebar" *ngIf="areArived">
   <div id="list-container">
     <ul>
-      <li *ngFor="let pokemon of pokemons" class="d-flex align-items-center space-between">
+      <li *ngFor="let pokemon of pokemons" class="d-flex align-items-center space-between" (click)="sendPokemon(pokemon)">
         <div id="name-container">{{pokemon.name}}</div>
         <div class="sprite-container"><img src="{{pokemon.sprites.front_default}}" alt="{{pokemon.name}} sprite"></div>
       </li>
